bug with wrong background positioin in devices fixed

--- a/css/preassessment.less
+++ b/css/preassessment.less
@@ -64,15 +64,6 @@
     transition: transform 0.5s;
     transform: translateY(-120px);
 
-    &:after{
-        position:absolute;
-        left:0;
-        top:0;
-        height:100%;
-        width:100%;
-        content:'';
-        background-color:rgba(0,0,0,0.35)
-    }
     .container-content-wrapper{
         position:relative;
         z-index:10;
